@@ -51,7 +51,8 @@ minecraft {
     makeObfSourceJar = false
 
     clientRunArgs += "--mixin mixins.farmhelper.json"
-    clientRunArgs += '--tweakClass gg.essential.loader.stage0.EssentialSetupTweaker'
+    clientRunArgs += '--tweakClass cc.polyfrost.oneconfig.loader.stage0.LaunchWrapperTweaker'
+    clientRunArgs += '-Xms256m -Xmx2048m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy'
 }
 
 
@@ -62,9 +63,6 @@ configurations {
 
 repositories {
     maven {
-        url = "https://repo.sk1er.club/repository/maven-public"
-    }
-    maven {
         url = "https://jitpack.io/"
     }
     maven {
@@ -74,14 +72,14 @@ repositories {
     maven {
         url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1"
     }
+    maven {
+        url = 'https://repo.polyfrost.cc/releases'
+    }
 }
 
 dependencies {
     implementation('org.spongepowered:mixin:0.7.11-SNAPSHOT')
     annotationProcessor('org.spongepowered:mixin:0.7.11-SNAPSHOT')
-
-    implementation "gg.essential:essential-1.8.9-forge:1725"
-    include "gg.essential:loader-launchwrapper:1.1.3"
 
     include('com.github.RewisServer:brigadier:master-SNAPSHOT')
     include('com.github.ronmamo:reflections:0.10.2')
@@ -98,6 +96,9 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok:1.18.24')
 
     implementation("me.djtheredstoner:DevAuth-forge-legacy:1.1.0")
+
+    compileOnly('cc.polyfrost:oneconfig-1.8.9-forge:0.2.0-alpha+')
+    include('cc.polyfrost:oneconfig-wrapper-launchwrapper:1.0.0-beta+')
 }
 
 mixin {
@@ -111,7 +112,7 @@ jar {
     manifest.attributes(
             "ForceLoadAsMod": true,
             "ModSide": "CLIENT",
-            "TweakClass": "gg.essential.loader.stage0.EssentialSetupTweaker",
+            "TweakClass": "cc.polyfrost.oneconfig.loader.stage0.LaunchWrapperTweaker",
             "TweakOrder": "0",
             "MixinConfigs": "mixins.farmhelper.json",
             "modversion": version,
